src/objects/inscor__Work_Order_Skill__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>inscor__Skill__c</referenceTo>
        <relationshipLabel>Work Order Skills</relationshipLabel>
        <relationshipName>Work_Order_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Work Order Skills</relationshipLabel>
        <relationshipName>Work_Order_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Order Skill</label>
    <nameField>
        <displayFormat>WOS-{0}</displayFormat>
        <label>Work Order Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>